Utworzono za pomocą Colab

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyNapRd6CNioVO3fcR6UI2Dn"
+      "authorship_tag": "ABX9TyNAYIG0rpD+jK8A1l+mFbVC"
     },
     "kernelspec": {
       "name": "python3",
@@ -48,8 +48,8 @@
         "import numpy as np\n",
         "import re\n",
         "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')\n",
         "\n",
         "\n",
         "\n",
@@ -175,7 +175,7 @@
         "csv_data = df.to_csv(index=False, header=False, sep=\";\").encode('utf-8')\n",
         "\n",
         "\n",
-        "creds = service_account.Credentials.from_service_account_file('/content/drive/MyDrive/Dane/python-access.json', scopes=['https://www.googleapis.com/auth/drive'])\n",
+        "# creds = service_account.Credentials.from_service_account_file('/content/drive/MyDrive/Dane/python-access.json', scopes=['https://www.googleapis.com/auth/drive'])\n",
         "\n",
         "drive_service = build('drive', 'v3', credentials=creds)\n",
         "\n",
