Utworzono za pomocą Colab

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyNaPHHwWYnUoHUIDgcs9T/i"
+      "authorship_tag": "ABX9TyPjOFw9Lgir3LTA8FONvkWj"
     },
     "kernelspec": {
       "name": "python3",
@@ -60,7 +60,7 @@
         "# -----------------------------\n",
         "# 1️⃣ DOWNLOAD ZIP FILE FROM WEB URL\n",
         "# -----------------------------\n",
-        "zip_url = \"https://www.allianz.pl/content/dam/onemarketing/cee/azpl/dokumenty/tfi/bjsfio/BJ_SFIO_wycena.zip\"  # 🔹 REPLACE with actual ZIP file URL\n",
+        "\n",
         "zip_path = \"/content/protected.zip\"  # 🔹 Temporary storage path\n",
         "\n",
         "\n",
@@ -77,14 +77,15 @@
         "# -----------------------------\n",
         "# 2️⃣ EXTRACT PDF FROM PASSWORD-PROTECTED ZIP\n",
         "# -----------------------------\n",
-        "zip_password = b\"BJSFIO_032011!\"  # 🔹 CHANGE this to the actual ZIP password\n",
+        "\n",
+        "zip_password_bytes = zip_password.encode('utf-8')\n",
         "pdf_filename = \"BJ_SFIO_wycena.pdf\"  # 🔹 Replace with the actual PDF file name inside ZIP\n",
         "pdf_path = f\"/content/{pdf_filename}\"  # 🔹 Extracted PDF storage\n",
         "\n",
         "\n",
         "with pyzipper.AESZipFile(zip_path, 'r') as zf:\n",
         "    try:\n",
-        "        zf.setpassword(zip_password)\n",
+        "        zf.setpassword(zip_password_bytes)\n",
         "        zf.extract(pdf_filename, \"/content/\")  # Extract to home directory\n",
         "\n",
         "        print(f\"✅ PDF extracted: {pdf_path}\")\n",
