creds z pliku json temp oraz url i pass z os env

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyPjOFw9Lgir3LTA8FONvkWj"
+      "authorship_tag": "ABX9TyPWpfrKXMuu6KSLDFEIXkch"
     },
     "kernelspec": {
       "name": "python3",
@@ -63,7 +63,8 @@
         "\n",
         "zip_path = \"/content/protected.zip\"  # 🔹 Temporary storage path\n",
         "\n",
-        "\n",
+        "zip_url = os.getenv('ZIP_URL')\n",
+        "zip_password = os.getnev('ZIP_PASSWORD')\n",
         "\n",
         "response = requests.get(zip_url)\n",
         "if response.status_code == 200:\n",
@@ -173,7 +174,7 @@
         "csv_data = df.to_csv(index=False, header=False, sep=\";\").encode('utf-8')\n",
         "\n",
         "\n",
-        "# creds = service_account.Credentials.from_service_account_file('/content/drive/MyDrive/Dane/python-access.json', scopes=['https://www.googleapis.com/auth/drive'])\n",
+        "creds = service_account.Credentials.from_service_account_file('/tmp/credentials.json', scopes=['https://www.googleapis.com/auth/drive'])\n",
         "\n",
         "drive_service = build('drive', 'v3', credentials=creds)\n",
         "\n",
