Utworzono za pomocą Colab

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyPWpfrKXMuu6KSLDFEIXkch"
+      "authorship_tag": "ABX9TyNnt0uKVc85Cs28Y41DOk42"
     },
     "kernelspec": {
       "name": "python3",
@@ -41,7 +41,7 @@
         "\n",
         "from googleapiclient.http import MediaIoBaseUpload\n",
         "\n",
-        "\n",
+        "import os\n",
         "import cv2\n",
         "import pytesseract\n",
         "from pdf2image import convert_from_path\n",
