Utworzono za pomocą Colab

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyNnt0uKVc85Cs28Y41DOk42"
+      "authorship_tag": "ABX9TyOtJsjpz9d+lkYsYdbkIYT6"
     },
     "kernelspec": {
       "name": "python3",
@@ -64,7 +64,7 @@
         "zip_path = \"/content/protected.zip\"  # 🔹 Temporary storage path\n",
         "\n",
         "zip_url = os.getenv('ZIP_URL')\n",
-        "zip_password = os.getnev('ZIP_PASSWORD')\n",
+        "zip_password = os.getenv('ZIP_PASSWORD')\n",
         "\n",
         "response = requests.get(zip_url)\n",
         "if response.status_code == 200:\n",
