Utworzono za pomocą Colab

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyOtJsjpz9d+lkYsYdbkIYT6"
+      "authorship_tag": "ABX9TyO1cJ3tM8qjtPnWJqi//Xnk"
     },
     "kernelspec": {
       "name": "python3",
@@ -61,7 +61,7 @@
         "# 1️⃣ DOWNLOAD ZIP FILE FROM WEB URL\n",
         "# -----------------------------\n",
         "\n",
-        "zip_path = \"/content/protected.zip\"  # 🔹 Temporary storage path\n",
+        "zip_path = \"/tmp/protected.zip\"  # 🔹 Temporary storage path\n",
         "\n",
         "zip_url = os.getenv('ZIP_URL')\n",
         "zip_password = os.getenv('ZIP_PASSWORD')\n",
@@ -81,7 +81,7 @@
         "\n",
         "zip_password_bytes = zip_password.encode('utf-8')\n",
         "pdf_filename = \"BJ_SFIO_wycena.pdf\"  # 🔹 Replace with the actual PDF file name inside ZIP\n",
-        "pdf_path = f\"/content/{pdf_filename}\"  # 🔹 Extracted PDF storage\n",
+        "pdf_path = f\"/tmp/{pdf_filename}\"  # 🔹 Extracted PDF storage\n",
         "\n",
         "\n",
         "with pyzipper.AESZipFile(zip_path, 'r') as zf:\n",
@@ -99,7 +99,7 @@
         "# 3️⃣ EXTRACT TABLE FROM PDF\n",
         "# -----------------------------\n",
         "\n",
-        "pdf_path = \"/content/BJ_SFIO_wycena.pdf\"\n",
+        "pdf_path = \"/tmp/BJ_SFIO_wycena.pdf\"\n",
         "\n",
         "\n",
         "# Convert all pages of the PDF to images\n",
