Utworzono za pomocą Colab

--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1I09nMLOlgXNJeSrUOUcol9espXiFEJL2",
-      "authorship_tag": "ABX9TyO1cJ3tM8qjtPnWJqi//Xnk"
+      "authorship_tag": "ABX9TyPHUM/t0dWX6+aI8wLeEJfm"
     },
     "kernelspec": {
       "name": "python3",
@@ -87,7 +87,7 @@
         "with pyzipper.AESZipFile(zip_path, 'r') as zf:\n",
         "    try:\n",
         "        zf.setpassword(zip_password_bytes)\n",
-        "        zf.extract(pdf_filename, \"/content/\")  # Extract to home directory\n",
+        "        zf.extract(pdf_filename, \"/tmp/\")  # Extract to tmp directory\n",
         "\n",
         "        print(f\"✅ PDF extracted: {pdf_path}\")\n",
         "    except Exception as e:\n",
