--- a/download_extract.ipynb
+++ b/download_extract.ipynb
@@ -50,7 +50,7 @@
     "# 1️⃣ DOWNLOAD ZIP FILE FROM WEB URL\n",
     "# -----------------------------\n",
     "\n",
-    "zip_path = \"/content/protected.zip\"  # 🔹 Temporary storage path\n",
+    "zip_path = \"/tmp/protected.zip\"  # 🔹 Temporary storage path\n",
     "\n",
     "zip_url = os.getenv('ZIP_URL')\n",
     "zip_password = os.getenv('ZIP_PASSWORD')\n",
@@ -70,13 +70,13 @@
     "\n",
     "zip_password_bytes = zip_password.encode('utf-8')\n",
     "pdf_filename = \"BJ_SFIO_wycena.pdf\"  # 🔹 Replace with the actual PDF file name inside ZIP\n",
-    "pdf_path = f\"/content/{pdf_filename}\"  # 🔹 Extracted PDF storage\n",
+    "pdf_path = f\"/tmp/{pdf_filename}\"  # 🔹 Extracted PDF storage\n",
     "\n",
     "\n",
     "with pyzipper.AESZipFile(zip_path, 'r') as zf:\n",
     "    try:\n",
     "        zf.setpassword(zip_password_bytes)\n",
-    "        zf.extract(pdf_filename, \"/content/\")  # Extract to home directory\n",
+    "        zf.extract(pdf_filename, \"/tmp/\")  # Extract to home directory\n",
     "\n",
     "        print(f\"✅ PDF extracted: {pdf_path}\")\n",
     "    except Exception as e:\n",
@@ -88,7 +88,7 @@
     "# 3️⃣ EXTRACT TABLE FROM PDF\n",
     "# -----------------------------\n",
     "\n",
-    "pdf_path = \"/content/BJ_SFIO_wycena.pdf\"\n",
+    "pdf_path = \"/tmp/BJ_SFIO_wycena.pdf\"\n",
     "\n",
     "\n",
     "# Convert all pages of the PDF to images\n",
