--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -47,7 +47,7 @@
     "title_base_url = \"https://stooq.pl/q/g/?s={}.n\"\n",
     "\n",
     "# Filepath for CSV\n",
-    "csv_filename = \"data.csv\"\n",
+    "csv_filename = \"/tmp/data.csv\"\n",
     "\n",
     "# List to store all results\n",
     "all_results = []\n",
