--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -142,53 +142,57 @@
     "    except Exception as e:\n",
     "        print(f\"Error reading CSV file: {e}\")\n",
     "        return\n",
+    "    if df.empty:\n",
+    "        print(\"The DataFrame is empty.\")\n",
+    "    else:\n",
+    "    \n",
+    "        # Print the first few rows to inspect the structure\n",
+    "        print(\"First few rows of the CSV file:\")\n",
+    "        print(df.head())\n",
     "\n",
-    "    # Print the first few rows to inspect the structure\n",
-    "    print(\"First few rows of the CSV file:\")\n",
-    "    print(df.head())\n",
+    "        # Strip any leading or trailing whitespace from the column names\n",
+    "        df.columns = df.columns.str.strip()\n",
     "\n",
-    "    # Strip any leading or trailing whitespace from the column names\n",
-    "    df.columns = df.columns.str.strip()\n",
-    "\n",
-    "    # Ensure the date column is in datetime format\n",
-    "    date_column = 'Data'  # The actual name of the date column\n",
-    "    if date_column not in df.columns:\n",
+    "        # Ensure the date column is in datetime format\n",
+    "        date_column = 'Data'  # The actual name of the date column\n",
+    "        \n",
+    "        if date_column not in df.columns:\n",
     "        print(f\"Warning: Column '{date_column}' not found. Available columns: {df.columns}\")\n",
     "        return\n",
     "\n",
-    "    df['date'] = pd.to_datetime(df[date_column])\n",
+    "        df['date'] = pd.to_datetime(df[date_column])\n",
     "\n",
-    "    # Sort the data by date in ascending order (this ensures the data is ordered)\n",
-    "    df = df.sort_values(by='date')\n",
+    "        # Sort the data by date in ascending order (this ensures the data is ordered)\n",
+    "        df = df.sort_values(by='date')\n",
     "\n",
-    "    # Calculate daily returns from the second column (prices)\n",
-    "    prices_column = df.columns[1]  # Assuming the second column contains the prices\n",
-    "    daily_returns = calculate_daily_returns(df[prices_column])\n",
+    "        # Calculate daily returns from the second column (prices)\n",
+    "        prices_column = df.columns[1]  # Assuming the second column contains the prices\n",
+    "        daily_returns = calculate_daily_returns(df[prices_column])\n",
     "\n",
-    "    # Calculate 22-day returns\n",
-    "    returns_22 = calculate_22_day_returns(df[prices_column])\n",
+    "        # Calculate 22-day returns\n",
+    "        returns_22 = calculate_22_day_returns(df[prices_column])\n",
     "\n",
-    "    # Calculate statistics for the last 66 22-day returns\n",
-    "    min_return, max_return, first_quartile = calculate_22_day_statistics(returns_22)\n",
+    "        # Calculate statistics for the last 66 22-day returns\n",
+    "        min_return, max_return, first_quartile = calculate_22_day_statistics(returns_22)\n",
     "\n",
-    "    # Get the newest 1-day and 22-day returns (from the most recent data point)\n",
-    "    newest_1_day_return = daily_returns.iloc[-1]\n",
-    "    newest_22_day_return = returns_22.iloc[-1]\n",
+    "        # Get the newest 1-day and 22-day returns (from the most recent data point)\n",
+    "        newest_1_day_return = daily_returns.iloc[-1]\n",
+    "        newest_22_day_return = returns_22.iloc[-1]\n",
     "    \n",
-    "    # Get the title of the webpage\n",
-    "    nazwa = get_webpage_title(url_title)\n",
+    "        # Get the title of the webpage\n",
+    "        nazwa = get_webpage_title(url_title)\n",
     "    \n",
-    "    # Save the required data into an array\n",
-    "    result = [\n",
-    "        nazwa,  # Name of the file\n",
-    "        min_return,  # Minimum of the last 66 22-day returns\n",
-    "        max_return,  # Maximum of the last 66 22-day returns\n",
-    "        first_quartile,  # First quartile of the last 66 22-day returns\n",
-    "        newest_1_day_return,  # Newest 1-day return\n",
-    "        newest_22_day_return  # Newest 22-day return\n",
-    "    ]\n",
+    "        # Save the required data into an array\n",
+    "        result = [\n",
+    "            nazwa,  # Name of the file\n",
+    "            min_return,  # Minimum of the last 66 22-day returns\n",
+    "            max_return,  # Maximum of the last 66 22-day returns\n",
+    "            first_quartile,  # First quartile of the last 66 22-day returns\n",
+    "            newest_1_day_return,  # Newest 1-day return\n",
+    "            newest_22_day_return  # Newest 22-day return\n",
+    "        ]\n",
     "    \n",
-    "    return result\n",
+    "        return result\n",
     "\n",
     "# Loop through each XXXX value\n",
     "for xxxx in range(1000, 6001):\n",
