--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -144,8 +144,8 @@
     "        return\n",
     "    if df.empty:\n",
     "        print(\"The DataFrame is empty.\")\n",
+    "        return \n",
     "    else:\n",
-    "    \n",
     "        # Print the first few rows to inspect the structure\n",
     "        print(\"First few rows of the CSV file:\")\n",
     "        print(df.head())\n",
@@ -157,7 +157,7 @@
     "        date_column = 'Data'  # The actual name of the date column\n",
     "        \n",
     "        if date_column not in df.columns:\n",
-    "        print(f\"Warning: Column '{date_column}' not found. Available columns: {df.columns}\")\n",
+    "            print(f\"Warning: Column '{date_column}' not found. Available columns: {df.columns}\")\n",
     "        return\n",
     "\n",
     "        df['date'] = pd.to_datetime(df[date_column])\n",
