--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -39,6 +39,14 @@
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "\n",
+    "# Google Drive API dependencies\n",
+    "from googleapiclient.discovery import build\n",
+    "\n",
+    "from google.oauth2 import service_account\n",
+    "\n",
+    "from googleapiclient.http import MediaIoBaseUpload\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
