file creation if missing
fixed creation of file

--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -259,7 +259,7 @@
     "    # If the file doesn't exist, create it\n",
     "    file_metadata = {\n",
     "        'name': file_name,\n",
-    "        'parents': [file_path.split('/')[-2]]\n",
+    "        'parents': [folder_id] \n",
     "    }\n",
     "    # The MediaIoBaseUpload class needs to be called directly, not as an attribute of drive_service.\n",
     "    media = MediaIoBaseUpload(io.BytesIO(csv_data), mimetype='text/csv', resumable=True)\n",
