--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -267,7 +267,7 @@
     "    file_id = created_file.get('id')\n",
     "    print(f\"File '{file_name}' created. File ID: {file_id}\")\n",
     "\n",
-    "print(f\"Analysis complete. Extracted data from {len(images)} pages saved in 'oceny.csv'.\")\n",
+    "print(f\"Analysis complete. Extracted data from {len(all_results)} pages saved in 'oceny.csv'.\")\n",
     "\n"
    ]
   },
