--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -38,6 +38,7 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from bs4 import BeautifulSoup\n",
     "import os\n",
+    "import io\n",
     "\n",
     "# Google Drive API dependencies\n",
     "from googleapiclient.discovery import build\n",
