--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -221,9 +221,8 @@
     "    time.sleep(2)  # Optional delay\n",
     "\n",
     "# Convert results to DataFrame and save\n",
-    "if all_results:\n",
-    "    final_df = pd.DataFrame(all_results, columns=[\"Title\", \"Min 22-day Return\", \"Max 22-day Return\", \"1st Quartile\", \"Latest 1-day Return\", \"Latest 22-day Return\"])\n",
-    "    csv_data = final_df.to_csv(index=False, header=False, sep=\";\").encode('utf-8')\n",
+    "final_df = pd.DataFrame(all_results, columns=[\"Title\", \"Min 22-day Return\", \"Max 22-day Return\", \"1st Quartile\", \"Latest 1-day Return\", \"Latest 22-day Return\"])\n",
+    "csv_data = final_df.to_csv(index=False, header=True, sep=\";\").encode('utf-8')\n",
     "\n",
     "creds = service_account.Credentials.from_service_account_file('/tmp/credentials.json', scopes=['https://www.googleapis.com/auth/drive'])\n",
     "\n",
