--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ecd9c3-24ef-4333-93ec-52bf90d633b8",
+   "id": "2a6daa0f-ac65-4415-9eae-6127427e4233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,15 @@
     "\n",
     "from googleapiclient.http import MediaIoBaseUpload\n",
     "\n",
+    "import tempfile\n",
     "\n",
+    "\n",
+    "# Get the temporary directory\n",
+    "tmp_dir = tempfile.gettempdir()\n",
+    "print(f\"Temporary directory: {tmp_dir}\")\n",
+    "\n",
+    "# Create a temporary file inside the temp directory # Filepath for CSV\n",
+    "csv_filename = os.path.join(tmp_dir, \"data.csv\")\n",
     "\n",
     "\n",
     "\n",
@@ -55,8 +63,8 @@
     "csv_base_url = \"https://stooq.pl/q/d/l/?s={}.n&i=d\"\n",
     "title_base_url = \"https://stooq.pl/q/g/?s={}.n\"\n",
     "\n",
-    "# Filepath for CSV\n",
-    "csv_filename = \"/tmp/data.csv\"\n",
+    "\n",
+    "\n",
     "\n",
     "# List to store all results\n",
     "all_results = []\n",
@@ -149,60 +157,74 @@
     "    try:\n",
     "        df = pd.read_csv(filename, on_bad_lines='skip', delimiter=',', decimal='.', encoding='utf-8')\n",
     "    except Exception as e:\n",
-    "        print(f\"Error reading CSV file: {e}\")\n",
-    "        return\n",
+    "        print(f\"❌ Error reading CSV file: {e}\")\n",
+    "        return None\n",
+    "\n",
     "    if df.empty:\n",
-    "        print(\"The DataFrame is empty.\")\n",
-    "        return \n",
-    "    else:\n",
-    "        # Print the first few rows to inspect the structure\n",
-    "        print(\"First few rows of the CSV file:\")\n",
-    "        print(df.head())\n",
+    "        print(\"⚠️ The DataFrame is empty.\")\n",
+    "        return None\n",
     "\n",
-    "        # Strip any leading or trailing whitespace from the column names\n",
-    "        df.columns = df.columns.str.strip()\n",
+    "    # Strip any leading or trailing whitespace from the column names\n",
+    "    df.columns = df.columns.str.strip()\n",
     "\n",
-    "        # Ensure the date column is in datetime format\n",
-    "        date_column = 'Data'  # The actual name of the date column\n",
-    "        \n",
-    "        if date_column not in df.columns:\n",
-    "            print(f\"Warning: Column '{date_column}' not found. Available columns: {df.columns}\")\n",
-    "        return\n",
+    "    # Ensure the date column is in datetime format\n",
+    "    date_column = 'Data'  # The actual name of the date column\n",
+    "    if date_column not in df.columns:\n",
+    "        print(f\"⚠️ Warning: Column '{date_column}' not found. Available columns: {df.columns}\")\n",
+    "        return None\n",
     "\n",
-    "        df['date'] = pd.to_datetime(df[date_column])\n",
+    "    # Convert date column\n",
+    "    df['date'] = pd.to_datetime(df[date_column])\n",
     "\n",
-    "        # Sort the data by date in ascending order (this ensures the data is ordered)\n",
-    "        df = df.sort_values(by='date')\n",
+    "    # Sort the data by date in ascending order\n",
+    "    df = df.sort_values(by='date')\n",
     "\n",
-    "        # Calculate daily returns from the second column (prices)\n",
-    "        prices_column = df.columns[1]  # Assuming the second column contains the prices\n",
-    "        daily_returns = calculate_daily_returns(df[prices_column])\n",
+    "    # Calculate daily returns from the second column (prices)\n",
+    "    prices_column = df.columns[1]  # Assuming the second column contains the prices\n",
+    "    daily_returns = calculate_daily_returns(df[prices_column])\n",
     "\n",
-    "        # Calculate 22-day returns\n",
-    "        returns_22 = calculate_22_day_returns(df[prices_column])\n",
+    "    # Calculate 22-day returns\n",
+    "    returns_22 = calculate_22_day_returns(df[prices_column])\n",
     "\n",
-    "        # Calculate statistics for the last 66 22-day returns\n",
-    "        min_return, max_return, first_quartile = calculate_22_day_statistics(returns_22)\n",
+    "    # Check if we have enough data points\n",
+    "    if len(daily_returns) == 0 or len(returns_22) == 0:\n",
+    "        print(\"⚠️ Not enough data to calculate returns.\")\n",
+    "        return None\n",
     "\n",
-    "        # Get the newest 1-day and 22-day returns (from the most recent data point)\n",
-    "        newest_1_day_return = daily_returns.iloc[-1]\n",
-    "        newest_22_day_return = returns_22.iloc[-1]\n",
+    "    # Calculate statistics for the last 66 22-day returns\n",
+    "    min_return, max_return, first_quartile = calculate_22_day_statistics(returns_22)\n",
+    "\n",
+    "    # Get the newest 1-day and 22-day returns\n",
+    "    newest_1_day_return = daily_returns.iloc[-1] if len(daily_returns) > 0 else None\n",
+    "    newest_22_day_return = returns_22.iloc[-1] if len(returns_22) > 0 else None\n",
+    "\n",
+    "    # Get the title of the webpage\n",
+    "    nazwa = get_webpage_title(url_title)\n",
+    "    if nazwa == \"Wyszukiwanie symbolu - Stooq\" or nazwa == \"No <title> tag found\":\n",
+    "        print(\"⚠️ Brak symbolu w bazie Stooq\")\n",
+    "        return None\n",
     "    \n",
-    "        # Get the title of the webpage\n",
-    "        nazwa = get_webpage_title(url_title)\n",
+    "    # Save the required data into an array\n",
+    "    result = [\n",
+    "        nazwa,  # Name of the file\n",
+    "        min_return,  # Minimum of the last 66 22-day returns\n",
+    "        max_return,  # Maximum of the last 66 22-day returns\n",
+    "        first_quartile,  # First quartile of the last 66 22-day returns\n",
+    "        newest_1_day_return,  # Newest 1-day return\n",
+    "        newest_22_day_return  # Newest 22-day return\n",
+    "    ]\n",
     "    \n",
-    "        # Save the required data into an array\n",
-    "        result = [\n",
-    "            nazwa,  # Name of the file\n",
-    "            min_return,  # Minimum of the last 66 22-day returns\n",
-    "            max_return,  # Maximum of the last 66 22-day returns\n",
-    "            first_quartile,  # First quartile of the last 66 22-day returns\n",
-    "            newest_1_day_return,  # Newest 1-day return\n",
-    "            newest_22_day_return  # Newest 22-day return\n",
-    "        ]\n",
-    "    \n",
-    "        return result\n",
-    "\n",
+    "    print(\"✅ Processed Data:\", result)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04fac899-f191-4a8b-8c4b-f386c42344a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Loop through each XXXX value\n",
     "for xxxx in range(1000, 1010):\n",
     "    csv_url = csv_base_url.format(xxxx)\n",
@@ -211,19 +233,56 @@
     "    print(f\"Processing: {csv_url}\")\n",
     "    result = process_data(csv_url, title_url, csv_filename)\n",
     "\n",
-    "    if result:\n",
-    "        all_results.append(result)\n",
-    "\n",
+    "    all_results.append(result)\n",
+    "   # print(\"✅ Processed and appended Data:\", all_results)\n",
     "    # Delete CSV file after processing\n",
     "    if os.path.exists(csv_filename):\n",
     "        os.remove(csv_filename)\n",
-    "\n",
-    "    time.sleep(2)  # Optional delay\n",
-    "\n",
+    "    \n",
+    "    time.sleep(2)  # Optional delay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7bee3ebf-0596-4d8f-badb-03447ce8a71d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               Title  Min 22-day Return  \\\n",
+      "0  1006.N - Goldman Sachs Parasol FIO Globalnej D...          -0.040077   \n",
+      "1       1007.N - MetLife PPE Fundusz Akcji B - Stooq          -0.016511   \n",
+      "2                1008.N - PKO Emerytura 2065 - Stooq          -0.022240   \n",
+      "3         1009.N - PKO Obligacji Uniwersalny - Stooq           0.003936   \n",
+      "4  1006.N - Goldman Sachs Parasol FIO Globalnej D...          -0.040077   \n",
+      "\n",
+      "   Max 22-day Return  1st Quartile  Latest 1-day Return  Latest 22-day Return  \n",
+      "0           0.042157     -0.014637            -0.006401             -0.040077  \n",
+      "1           0.116253      0.019590             0.004369              0.050254  \n",
+      "2           0.080422      0.005791             0.006084              0.005319  \n",
+      "3           0.007159      0.004869             0.000169              0.005518  \n",
+      "4           0.042157     -0.014637            -0.006401             -0.040077  \n"
+     ]
+    }
+   ],
+   "source": [
     "# Convert results to DataFrame and save\n",
-    "final_df = pd.DataFrame(all_results, columns=[\"Title\", \"Min 22-day Return\", \"Max 22-day Return\", \"1st Quartile\", \"Latest 1-day Return\", \"Latest 22-day Return\"])\n",
+    "cleaned_results = [row for row in all_results if row is not None]\n",
+    "final_df = pd.DataFrame(cleaned_results, columns=[\"Title\", \"Min 22-day Return\", \"Max 22-day Return\", \"1st Quartile\", \"Latest 1-day Return\", \"Latest 22-day Return\"])\n",
     "csv_data = final_df.to_csv(index=False, header=True, sep=\";\").encode('utf-8')\n",
-    "\n",
+    "print(final_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5950e279-3c3e-4697-bfa0-9ce2e1990625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "creds = service_account.Credentials.from_service_account_file('/tmp/credentials.json', scopes=['https://www.googleapis.com/auth/drive'])\n",
     "\n",
     "drive_service = build('drive', 'v3', credentials=creds)\n",
@@ -267,8 +326,7 @@
     "    file_id = created_file.get('id')\n",
     "    print(f\"File '{file_name}' created. File ID: {file_id}\")\n",
     "\n",
-    "print(f\"Analysis complete. Extracted data from {len(all_results)} pages saved in 'oceny.csv'.\")\n",
-    "\n"
+    "print(f\"Analysis complete. Extracted data from {len(all_results)} pages saved in 'oceny.csv'.\")"
    ]
   },
   {
