--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -89,6 +89,8 @@
     "    # Set up Chrome options for headless mode (no GUI)\n",
     "    options = Options()\n",
     "    options.headless = True  # Run the browser in headless mode\n",
+    "    options.add_argument('--no-sandbox')  # Required for CI environments like GitHub Actions\n",
+    "    options.add_argument('--disable-dev-shm-usage')  # Helps with low-memory environments\n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
