updates to chrome config

--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -91,6 +91,10 @@
     "    options.headless = True  # Run the browser in headless mode\n",
     "    options.add_argument('--no-sandbox')  # Required for CI environments like GitHub Actions\n",
     "    options.add_argument('--disable-dev-shm-usage')  # Helps with low-memory environments\n",
+    "    options.add_argument('--disable-gpu')  # Disables GPU hardware acceleration\n",
+    "    options.add_argument('--disable-software-rasterizer')  # Disables software rasterizer\n",
+    "    options.add_argument('--start-maximized')  # Maximize the window (might help in headless)\n",
+    "    options.add_argument('--disable-extensions')  # Disable extension\n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
