updates to get chrome to run

--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -88,13 +88,14 @@
     "def get_webpage_title(url):\n",
     "    # Set up Chrome options for headless mode (no GUI)\n",
     "    options = Options()\n",
-    "    options.headless = True  # Run the browser in headless mode\n",
-    "    options.add_argument('--no-sandbox')  # Required for CI environments like GitHub Actions\n",
-    "    options.add_argument('--disable-dev-shm-usage')  # Helps with low-memory environments\n",
-    "    options.add_argument('--disable-gpu')  # Disables GPU hardware acceleration\n",
-    "    options.add_argument('--disable-software-rasterizer')  # Disables software rasterizer\n",
-    "    options.add_argument('--start-maximized')  # Maximize the window (might help in headless)\n",
-    "    options.add_argument('--disable-extensions')  # Disable extension\n",
+    "    options.add_argument('--headless')  # Run in headless mode\n",
+    "    options.add_argument('--no-sandbox')  # Bypass OS security model\n",
+    "    options.add_argument('--disable-dev-shm-usage')  # Overcome limited resource problems\n",
+    "    options.add_argument('--disable-gpu')  # Disable GPU acceleration\n",
+    "    options.add_argument('--remote-debugging-port=9222')  # Enable debugging\n",
+    "    options.add_argument('--disable-software-rasterizer')  # Disable software rasterizer\n",
+    "    options.add_argument('--window-size=1920x1080')  # Set screen size\n",
+    "    options.add_argument('--disable-setuid-sandbox')  # Disable sandbox\n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
