--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -88,14 +88,13 @@
     "def get_webpage_title(url):\n",
     "    # Set up Chrome options for headless mode (no GUI)\n",
     "    options = Options()\n",
-    "    options.add_argument('--headless')  # Run in headless mode\n",
-    "    options.add_argument('--no-sandbox')  # Bypass OS security model\n",
-    "    options.add_argument('--disable-dev-shm-usage')  # Overcome limited resource problems\n",
-    "    options.add_argument('--disable-gpu')  # Disable GPU acceleration\n",
-    "    options.add_argument('--remote-debugging-port=9222')  # Enable debugging\n",
-    "    options.add_argument('--disable-software-rasterizer')  # Disable software rasterizer\n",
-    "    options.add_argument('--window-size=1920x1080')  # Set screen size\n",
-    "    options.add_argument('--disable-setuid-sandbox')  # Disable sandbox\n",
+    "    options.add_argument(\"--headless=new\")  # Use new headless mode\n",
+    "    options.add_argument(\"--disable-gpu\")  # Disable GPU acceleration\n",
+    "    options.add_argument(\"--no-sandbox\")  # Bypass OS security model\n",
+    "    options.add_argument(\"--disable-dev-shm-usage\")  # Overcome limited resource problems\n",
+    "    options.add_argument(\"--remote-debugging-port=9222\")  # Enable debugging\n",
+    "    options.add_argument(\"--disable-setuid-sandbox\")  # Disable sandbox\n",
+    "    options.add_argument(\"--window-size=1920x1080\")  # Set screen size\n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
