--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -93,8 +93,11 @@
     "    options.add_argument(\"--no-sandbox\")  # Bypass OS security model\n",
     "    options.add_argument(\"--disable-dev-shm-usage\")  # Overcome limited resource problems\n",
     "    options.add_argument(\"--remote-debugging-port=9222\")  # Enable debugging\n",
-    "    options.add_argument(\"--disable-setuid-sandbox\")  # Disable sandbox\n",
-    "    options.add_argument(\"--window-size=1920x1080\")  # Set screen size\n",
+    "    options.add_argument(\"--disable-software-rasterizer\")  # Disable sandbox\n",
+    "    options.add_argument(\"--disable-features=UseOzonePlatform\")  # Set screen size\n",
+    "   \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
