--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -31,11 +31,9 @@
     "import time\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.chrome.options import Options\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "import io\n",
@@ -88,12 +86,9 @@
     "def get_webpage_title(url):\n",
     "    # Set up Chrome options for headless mode (no GUI)\n",
     "    options = Options()\n",
-    "    options.add_argument(\"--headless=new\")  # Use new headless mode\n",
-    "    options.add_argument(\"--disable-gpu\")  # Disable GPU acceleration\n",
-    "    options.add_argument(\"--no-sandbox\")  # Bypass OS security model\n",
-    "    options.add_argument(\"--disable-dev-shm-usage\")  # Overcome limited resource problems\n",
-    "    options.add_argument(\"--disable-software-rasterizer\")  # Disable sandbox\n",
-    "    options.add_argument(\"--disable-features=UseOzonePlatform\")  # Set screen size\n",
+    "    options.add_argument('--headless=new')\n",
+    "    options.add_argument('--no-sandbox')\n",
+    "    options.add_argument('--disable-dev-shm-usage')\n",
     "   \n",
     "    \n",
     "    \n",
