--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -87,7 +87,8 @@
     "    options.add_argument('--headless=new')\n",
     "    options.add_argument('--no-sandbox')\n",
     "    options.add_argument('--disable-dev-shm-usage')\n",
-    "   \n",
+    "    options.add_argument('--user-data-dir=/tmp/chrome-data')\n",
+    "    options.add_argument('--remote-debugging-port=9222')\n",
     "    \n",
     "    \n",
     "    \n",
