--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -86,9 +86,7 @@
     "    options = Options()\n",
     "    options.add_argument('--headless=new')\n",
     "    options.add_argument('--no-sandbox')\n",
-    " \n",
-    "    \n",
-    "    \n",
+    "    options.add_argument('--user-data-dir=/tmp/chrome_test_data') #added this line.\n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
