--- a/download_FI.ipynb
+++ b/download_FI.ipynb
@@ -86,11 +86,15 @@
     "    options = Options()\n",
     "    options.add_argument('--headless=new')\n",
     "    options.add_argument('--no-sandbox')\n",
-    "    options.add_argument('--user-data-dir=/tmp/chrome_test_data') #added this line.\n",
+    "    options.add_argument('--user-data-dir=/tmp/chrome_test_data') \n",
+    "    options.add_argument('--disable-dev-shm-usage')\n",
+    "    \n",
+    "    print(\"URL: \", url)\n",
     "    \n",
     "    # Automatically download and manage ChromeDriver\n",
     "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
     "    \n",
+    "    print(\"URL: \", url)\n",
     "    # Open the webpage URL\n",
     "    driver.get(url)\n",
     "    \n",
